--- a/styles.css
+++ b/styles.css
@@ -1,94 +1,14 @@
-/* General styles */
-body {
+html, body {
+    height: 100%;
     margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-}
 
-header,
-main,
-footer {
-    padding: 20px;
 }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0;
-}
-
-/* Header styles */
-header {
-    background-color: #333;
-    color: #fff;
-}
-
-header h1 {
-    font-size: 36px;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav li {
-    display: inline-block;
-    margin-right: 10px;
-}
-
-nav a {
-    color: #fff;
-    text-decoration: none;
-}
-
-/* Main styles */
-main {
-    max-width: 800px;
-    margin: 0 auto;
-}
-
-section {
-    margin-bottom: 20px;
-}
-
-section h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-form label {
-    display: block;
-    margin-bottom: 5px;
-}
-
-form input,
-form textarea {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    font-size: 16px;
-}
-
-form button {
-    padding: 10px 20px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 3px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-/* Footer styles */
-footer {
-    background-color: #f2f2f2;
-    padding: 10px;
-    text-align: center;
-    font-size: 14px;
+.container {
+    background-image: url("mohammad-rahmani-N5bT5RctFZ8-unsplash.jpg");
+    width: 100%;
+    height: 100%;
+    background-size: 100%;
+    overflow: hidden;
+    /* border: 5px solid red; */
+    
 }
