--- a/essentials/styles.css
+++ b/essentials/styles.css
@@ -21,11 +21,42 @@ position: fixed;
     width: 100%;
     height: 100%;
     background-color: rgba(4, 1, 25, 0.639);
-    /* Set the initial background color to white with full opacity */
+    /* transition: background-color 1.5s ease-in-out; */
+    animation: fade-in 3s ease-in forwards;
     z-index: 9999;
-    /* Set a high z-index to ensure the overlay appears on top of everything else */
-    transition: background-color 1.5s ease-in-out;
-    /* Add a transition effect for the background color */
-
-    /* rgb(242, 121, 59) ==> this is the orange color i'm going for */
+ 
 }
+@keyframes fade-in {
+    from {
+        background-color: rgba(0, 0, 0, 0);
+    }
+
+    to {
+        background-color: rgba(0, 0, 0, 0.568);
+    }
+}
+
+.about {
+    color:rgb(242, 121, 59);
+    font-size: x-large;
+    font-weight:900;
+}
+
+.fade-text {
+     /* rgb(242, 121, 59) ==> this is the orange color i'm going for */
+     /* opacity: 1; */
+     color: rgb(242, 121, 59);
+     /* transition: opacity 1.5s ease-in-out; */
+     animation: fade-text 3s ease-in forwards;
+     /* Start with an opacity of 0 to make the text invisible */
+ }
+
+ @keyframes fade-text {
+     from {
+         opacity: 0;
+     }
+
+     to {
+         opacity: 1;
+     }
+ }
