--- a/essentials/styles.css
+++ b/essentials/styles.css
@@ -10,11 +10,12 @@ html, body {
     background-size: 100%;
     overflow: hidden;
     background-repeat: no-repeat;
+    /* z-index: 1000; */
     /* border: 5px solid red; */
 }
 
 .overlay {
-position: fixed;
+    position: fixed;
     /* Position the overlay over the entire page */
     top: 0;
     left: 0;
@@ -24,15 +25,27 @@ position: fixed;
     /* transition: background-color 1.5s ease-in-out; */
     animation: fade-in 3s ease-in forwards;
     z-index: 9999;
+    /* backdrop-filter: blur(4px); */
  
 }
 @keyframes fade-in {
     from {
-        background-color: rgba(0, 0, 0, 0);
+        background-color: rgba(0, 0, 0, 0),
+        
     }
 
     to {
         background-color: rgba(0, 0, 0, 0.568);
+    }
+}
+
+@keyframes bd-fade-in {
+    from {
+        backdrop-filter: blur(0px),
+    }
+
+    to {
+        backdrop-filter: blur(3px),
     }
 }
 
@@ -47,7 +60,7 @@ position: fixed;
      /* opacity: 1; */
      color: rgb(242, 121, 59);
      /* transition: opacity 1.5s ease-in-out; */
-     animation: fade-text 2s ease-in forwards;
+     animation: fade-text 1s ease-in forwards;
      /* Start with an opacity of 0 to make the text invisible */
  }
 
@@ -70,9 +83,9 @@ position: fixed;
     padding: 5em;
     color: #fff;
     font-family: SourceCodePro;
-    font-size: 3vw;
+    font-size: 3em;
     overflow: hidden;
-    color: rgb(242, 121, 59);
+    /* color: rgb(242, 121, 59); */
      /* Ensures the content is not revealed until the animation */
      /* border-right: .15em solid orange; */
      /* The typwriter cursor */
