--- a/essentials/styles.css
+++ b/essentials/styles.css
@@ -1,3 +1,48 @@
+/* look into typed.js */
+nav {
+    background-color: rgba(2, 3, 22, 0.751);
+    /* Dark background color with transparency */
+    /* justify-content: center; */
+    text-align: center;
+    position: fixed;
+    width: 100%;
+    /* top: 0; */
+    z-index: 9999;
+    font-family: SourceCodePro;
+    left: 0;
+    right: 0;
+    /* margin-left: 35%; */
+    margin-right: auto;
+    /* /* height: 3em; */
+}
+
+nav ul {
+    
+    /* list-style-type: none; */
+    margin: 0;
+    padding: 0;
+    /* overflow: hidden; */
+   /* justify-content: center; */
+    /* text-align: center; */
+}
+
+nav ul li {
+    display: inline-block;
+}
+
+nav ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 20px 16px;
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    background-color: rgba(94, 15, 185, 0.208);
+    /* Darker background color on hover */
+}
+
 html, body {
     height: 100%;
     margin: 0;
@@ -15,13 +60,13 @@ html, body {
 }
 
 .overlay {
-    position: fixed;
+    /* position: fixed; */
     /* Position the overlay over the entire page */
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(4, 1, 25, 0.639);
+    background-color: rgba(3, 1, 13, 0.406);
     /* transition: background-color 1.5s ease-in-out; */
     animation: fade-in 3s ease-in forwards;
     z-index: 9999;
@@ -35,7 +80,7 @@ html, body {
     }
 
     to {
-        background-color: rgba(0, 0, 0, 0.568);
+        background-color: rgba(1, 4, 21, 0.701);
     }
 }
 
@@ -51,16 +96,19 @@ html, body {
 
 .about {
     color:rgb(242, 121, 59);
-    font-size: x-large;
+    /* font-size: x-large; */
     /* font-weight:900; */
 }
 
 .fade-text {
-     /* rgb(242, 121, 59) ==> this is the orange color i'm going for */
-     /* opacity: 1; */
-     color: rgb(242, 121, 59);
-     /* transition: opacity 1.5s ease-in-out; */
-     animation: fade-text 1s ease-in forwards;
+    animation: fade-text 2s ease-in forwards;
+    /* word-wrap: break-word; */
+    /* display: block; */
+    /* color: rgb(242, 121, 59); */
+    /* rgb(242, 121, 59) ==> this is the orange color i'm going for */
+    /* opacity: 1; */
+    /* text-align: center; */
+     transition: opacity 1.5s ease-in-out;
      /* Start with an opacity of 0 to make the text invisible */
  }
 
@@ -80,24 +128,27 @@ html, body {
  }
  /* typing effect */
  .typing  {
-    padding: 5em;
+    padding: 1em;
     color: #fff;
     font-family: SourceCodePro;
     font-size: 3em;
     overflow: hidden;
+    margin: 0 auto;
+    /* width: 15em;s */
+    /* width: 20em; */
     /* color: rgb(242, 121, 59); */
      /* Ensures the content is not revealed until the animation */
      /* border-right: .15em solid orange; */
      /* The typwriter cursor */
-     white-space: nowrap;
+     /* white-space: nowrap; */
      /* Keeps the content on a single line */
      /* margin: 0 auto; */
      /* Gives that scrolling effect as the typing happens */
      /* letter-spacing: 10px; */
      /* Adjust as needed */
-     animation:
-         typing 3.5s steps(600, end),
-         blink-caret .10s step-end ;
+     /* animation:
+         typing 2.5s steps(300, end), */
+         /* blink-caret .10s step-end ; */
  }
 
  /* The typing effect */
