--- a/essentials/styles.css
+++ b/essentials/styles.css
@@ -1,18 +1,19 @@
 /* look into typed.js */
 nav {
     background-color: rgba(2, 3, 22, 0.751);
+    
     /* Dark background color with transparency */
     /* justify-content: center; */
     text-align: center;
     position: fixed;
     width: 100%;
-    /* top: 0; */
     z-index: 9999;
     font-family: SourceCodePro;
     left: 0;
     right: 0;
-    /* margin-left: 35%; */
     margin-right: auto;
+    /* top: 0; */
+    /* margin-left: 35%; */
     /* /* height: 3em; */
 }
 
@@ -55,6 +56,7 @@ html, body {
     background-size: 100%;
     overflow: hidden;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     /* z-index: 1000; */
     /* border: 5px solid red; */
 }
@@ -129,26 +131,15 @@ html, body {
  /* typing effect */
  .typing  {
     padding: 1em;
+    padding-top: 3em;
     color: #fff;
     font-family: SourceCodePro;
     font-size: 3em;
     overflow: hidden;
     margin: 0 auto;
-    /* width: 15em;s */
-    /* width: 20em; */
-    /* color: rgb(242, 121, 59); */
-     /* Ensures the content is not revealed until the animation */
-     /* border-right: .15em solid orange; */
-     /* The typwriter cursor */
-     /* white-space: nowrap; */
-     /* Keeps the content on a single line */
-     /* margin: 0 auto; */
-     /* Gives that scrolling effect as the typing happens */
-     /* letter-spacing: 10px; */
-     /* Adjust as needed */
-     /* animation:
-         typing 2.5s steps(300, end), */
-         /* blink-caret .10s step-end ; */
+    text-align: center;
+    /* justify-content: center; */
+
  }
 
  /* The typing effect */
