--- a/essentials/styles.css
+++ b/essentials/styles.css
@@ -1,9 +1,6 @@
 /* look into typed.js */
 nav {
     background-color: rgba(2, 3, 22, 0.751);
-    
-    /* Dark background color with transparency */
-    /* justify-content: center; */
     text-align: center;
     position: fixed;
     width: 100%;
@@ -45,32 +42,60 @@ nav ul li a:hover {
 }
 
 html, body {
-    height: 100%;
+    height: auto;
     margin: 0;
 
 }
-.container {
+body {
+    overflow-x: hidden;
     background-image: url("mohammad-rahmani-N5bT5RctFZ8-unsplash.jpg");
-    width: 100%;
-    height: 100%;
-    background-size: 100%;
-    overflow: hidden;
+    background-size: cover;
+    background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    /* z-index: 1000; */
-    /* border: 5px solid red; */
-}
-
-.overlay {
-    /* position: fixed; */
-    /* Position the overlay over the entire page */
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: between;
+    /* padding: 0 5rem; */
+    /* background-color: rgba(48, 158, 14, 0.957); */
+    animation: fade-in 3s ease-in forwards;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(3, 1, 13, 0.406);
-    /* transition: background-color 1.5s ease-in-out; */
-    animation: fade-in 3s ease-in forwards;
+}
+
+.container {
+    z-index: 9999;
+    animation: fade-in 2s ease-in forwards;
+            margin: 0;
+            height: auto;
+            min-height: 100vh;
+            width: 100%;
+            /* transition: background-color 1.5s ease-in-out; */
+            
+        }
+        /* background-image: url("mohammad-rahmani-N5bT5RctFZ8-unsplash.jpg"); */
+        /* width: 100%;
+        height: 100%;
+        /* background-size: 100%; */
+        /* overflow: hidden; */
+        /* background-repeat: no-repeat; */
+        /* background-attachment: fixed, scroll; */ */
+        /* background-attachment: fixed; */
+        /* margin-bottom: 2000px; */
+        /* z-index: 1000; */
+        /* border: 5px solid red; */
+        
+        .overlay {
+            /* position: fixed; */
+            /* Position the overlay over the entire page */
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(7, 3, 30, 0);
+            /* transition: background-color 1.5s ease-in-out; */
     z-index: 9999;
     /* backdrop-filter: blur(4px); */
  
@@ -86,15 +111,7 @@ html, body {
     }
 }
 
-@keyframes bd-fade-in {
-    from {
-        backdrop-filter: blur(0px),
-    }
 
-    to {
-        backdrop-filter: blur(3px),
-    }
-}
 
 .about {
     color:rgb(242, 121, 59);
@@ -104,13 +121,13 @@ html, body {
 
 .fade-text {
     animation: fade-text 2s ease-in forwards;
+    transition: opacity 1.5s ease-in-out;
     /* word-wrap: break-word; */
     /* display: block; */
     /* color: rgb(242, 121, 59); */
     /* rgb(242, 121, 59) ==> this is the orange color i'm going for */
     /* opacity: 1; */
     /* text-align: center; */
-     transition: opacity 1.5s ease-in-out;
      /* Start with an opacity of 0 to make the text invisible */
  }
 
@@ -139,22 +156,42 @@ html, body {
     margin: 0 auto;
     text-align: center;
     /* justify-content: center; */
+    
 
  }
 
  .type {
-    color: orange;
+    color: rgb(185, 92, 10);
     background-color: rgba(48, 63, 146, 0.192);
+    padding: .25em;
+    border-radius: 50px;
  }
 
- /* The typing effect */
- @keyframes typing {
-     from {
-         width: 0
-     }
 
-     to {
-         width: 100%;
-     }
+ /* ----------------Skills Page ///////////////*/
+
+
+ .skill-container {
+    display: flex;
+    justify-content: center;
  }
 
+ .skills{
+        width: 8em;
+        height: 8em;
+        background-color: #1f2937;
+        /* font-size: small; */
+        padding: 2em;
+        margin: 2em;
+        /* Dark navy */
+        margin-right: 20px;
+        border-radius: 20px;
+        /* text-align: center; */
+        transition: all .2s ease-in-out;
+ }
+
+
+
+ .skills:hover {
+     transform: scale(1.1);
+ }
