from works and photo
form now  works and deletes after submission

--- a/essentials/contact.css
+++ b/essentials/contact.css
@@ -1,4 +1,6 @@
 
+/* Use Email.js */
+/* maybe us vercel to host website */
  @font-face {
      font-family: SourceCodePro;
      src: url(SourceCodePro-MediumIt.otf) format('truetype');
