--- a/essentials/styles.css
+++ b/essentials/styles.css
@@ -297,5 +297,6 @@ body::-webkit-scrollbar {
 
             .partyGageProfile {
             display: flex;
-                justify-content: center;
-                align-items: center;
+            justify-content: center;
+            align-items: center;
+            }
