--- a/essentials/styles.css
+++ b/essentials/styles.css
@@ -8,7 +8,7 @@ nav {
     font-family: SourceCodePro;
     left: 0;
     right: 0;
-    margin-right: auto;
+    /* margin-right: auto; */
     /* top: 0; */
     /* margin-left: 35%; */
     /* /* height: 3em; */
@@ -34,6 +34,8 @@ nav ul li a {
     text-align: center;
     padding: 20px 16px;
     text-decoration: none;
+    transition: background-color .4s ease-in-out;
+    transition: color 0.6s ease-in-out;
 }
 
 nav ul li a:hover {
@@ -211,11 +213,11 @@ body::-webkit-scrollbar {
  /* the notecard change */
         .notecard-container {
             display: flex;
-                justify-content: center;
-                align-items: center;
-                /* height: 100vh; */
-                margin: 0;
-                font-size: 2vw;
+            justify-content: center;
+            align-items: center;
+            /* height: 100vh; */
+            margin: 0;
+            font-size: 2vw;
         }
     
         .notecard {
@@ -235,24 +237,24 @@ body::-webkit-scrollbar {
             position: relative;
             width: 100%;
             height: 100%;
-                            transition: transform 1s;
-                            transform-style: preserve-3d;
-                            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-                            border-radius: 10px;
-                        }
+            transition: transform 1s;
+            transform-style: preserve-3d;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            }
                         
-                        .notecard:hover .notecard-inner {
-                            transform: rotateY(180deg) scale(1);
-                        }
+        .notecard:hover .notecard-inner {
+            transform: rotateY(180deg) scale(1);
+        }
                         
-                        .notecard-front,
-                        .notecard-back {
-                            position: absolute;
-                            width: 100%;
-                            height: 100%;
-                            backface-visibility: hidden;
-                            border-radius: 10px;
-                        }
+        .notecard-front,
+        .notecard-back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            border-radius: 10px;
+        }
         .notecard-front {
             /* background-color: #FFD700; */
             background-color: #1f2937;
@@ -299,4 +301,34 @@ body::-webkit-scrollbar {
             display: flex;
             justify-content: center;
             align-items: center;
+            }
+
+            .socials {
+                justify-content: center;
+                display: flex;
+                align-items: center;
+            }
+
+            .instagram{
+                transition: transform 0.3s ease-in-out;
+                padding: 3em;
+            }
+            .instagram:hover {
+                transform: scale(1.3);
+            }
+
+            .linkedin{
+                transition: transform 0.3s ease-in-out;
+            }
+            .linkedin:hover {
+                transform: scale(1.3);
+            }
+
+            .github {
+                transition: transform 0.3s ease-in-out;
+                padding: 3em;
+            }
+
+            .github:hover {
+                transform: scale(1.3);
             }
