--- a/essentials/styles.css
+++ b/essentials/styles.css
@@ -34,8 +34,8 @@ nav ul li a {
     text-align: center;
     padding: 20px 16px;
     text-decoration: none;
-    transition: background-color .4s ease-in-out;
-    transition: color 0.6s ease-in-out;
+    transition: background-color .3s ease-in-out;
+    /* transition: color 0.6s ease-in-out; */
 }
 
 nav ul li a:hover {
@@ -79,13 +79,13 @@ body::-webkit-scrollbar {
 .container {
     z-index: 9999;
     animation: fade-in 2s ease-in forwards;
-            margin: 0;
-            height: auto;
-            min-height: 100vh;
-            width: 100%;
-            /* transition: background-color 1.5s ease-in-out; */
+    margin: 0;
+    height: auto;
+    min-height: 100vh;
+    width: 100%;
+    /* transition: background-color 1.5s ease-in-out; */
             
-        }
+}
         /* background-image: url("mohammad-rahmani-N5bT5RctFZ8-unsplash.jpg"); */
         /* width: 100%;
         height: 100%;
