--- a/essentials/styles.css
+++ b/essentials/styles.css
@@ -332,3 +332,19 @@ body::-webkit-scrollbar {
             .github:hover {
                 transform: scale(1.3);
             }
+
+            .projects {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .webPiano{
+                transition: transform 0.3s ease-in-out;
+                /* border-radius: 30px; */
+                /* padding: 6em; */
+            }
+            .webPiano:hover {
+                transform: scale(1.1);
+                /* background-color: red; */
+            }
