--- a/essentials/styles.css
+++ b/essentials/styles.css
@@ -346,5 +346,5 @@ body::-webkit-scrollbar {
             }
             .webPiano:hover {
                 transform: scale(1.1);
-                /* background-color: red; */
+                color: grey;
             }
